Update Valentine's message in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="card" id="mainCard">
         <div style="color:var(--gold); font-size: 0.7rem; letter-spacing: 5px; margin-bottom: 15px;">PRIVATE ACCESS</div>
-        <h1 id="text">Will you be <span style="color:var(--gold)">Lakshya's</span> Valentine Saakshiiiiii?</h1>
+        <h1 id="text">Will you be <span style="color:var(--gold)">Lakshya's</span> Valentine?</h1>
         <div id="joke-text">Choose wisely...</div>
         <div class="btn-wrapper">
             <button id="yesBtn">ACCEPT</button>
